err/key-mon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/key_mon-1.16.egg-info'...
Listing './lib/python3.5/site-packages/keymon'...
Compiling './lib/python3.5/site-packages/keymon/key_mon.py'...
***   File "./lib/python3.5/site-packages/keymon/key_mon.py", line 38
    print 'Error: Missing xlib, run sudo apt-get install python-xlib'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keymon/mod_mapper.py'...
***   File "./lib/python3.5/site-packages/keymon/mod_mapper.py", line 322
    print 'Output %r with %d entries' % (fname, len(codes))
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/keymon/options.py'...
***   File "./lib/python3.5/site-packages/keymon/options.py", line 437
    print io.getvalue()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/keymon/settings.py'...
***   File "./lib/python3.5/site-packages/keymon/settings.py", line 290
    print 'Settings changed'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/keymon/shaped_window.py'...
***   File "./lib/python3.5/site-packages/keymon/shaped_window.py", line 59
    print 'Unable to fade the window'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/keymon/themes'...
Listing './lib/python3.5/site-packages/keymon/themes/apple'...
Listing './lib/python3.5/site-packages/keymon/themes/classic'...
Listing './lib/python3.5/site-packages/keymon/themes/clear'...
Listing './lib/python3.5/site-packages/keymon/themes/clear-command'...
Listing './lib/python3.5/site-packages/keymon/themes/clear-ubuntu'...
Listing './lib/python3.5/site-packages/keymon/themes/modern'...
Listing './lib/python3.5/site-packages/keymon/themes/oblivion'...
Compiling './lib/python3.5/site-packages/keymon/xlib.py'...
***   File "./lib/python3.5/site-packages/keymon/xlib.py", line 131
    print "RECORD extension not found"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/pixmaps'...
Listing './share/python-wheels'...
